# lib_freetype

./: CMakeLists.txt  README.md
cmake/: FindExtBZip2.cmake  FindExtHarfBuzz.cmake  util.cmake
opt/: folders.csv  postprocess.py
